--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Roboto:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Tangerine&display=swap');
 
+*{
+  box-sizing: border-box; 
+  outline:none;
+}
+
 .App{
 
   width:100%;
@@ -13,27 +18,22 @@ h1,h2{
  font-family: 'Passion One', cursive;
  color: #E2C139;
  letter-spacing:6px;
- font-size:1.2em;
+ 
 }
 
 /*------H E A D E R---------*/
 
-.logo img{
-  width:100%;
-  margin-top:5px;
-}
 
 .header ul{
   list-style:none;
   display:flex;
+  /*position:fixed;*/
   justify-content:space-between;
-  position:absolute;
-  top:0%;
-  right:2%;
-  width:40%;
-  
+  width:40%;  
+  margin-right:20px;
   
 }
+
 .header ul li a{
   text-decoration:none;
   font-family: 'Roboto', sans-serif;
@@ -48,12 +48,45 @@ h1,h2{
   margin-left:30px
 }
 .header{
-  position:relative;
+  display:flex;
+  justify-content:flex-end;
+  width:100%;
+  height:120px;
   margin-bottom:0;
-  
-  
+  background-image:url("./Components/logo.png");    
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
+/*------------I L L U S T R A T I O N---------*/
+
+.illustrations img{
+ 
+  width:90%;
+  height:420px;
+  object-fit:cover;
+  transition: 2s;
+  
+}
+.illustrations  img:hover{
+  transform:scale(1.3)
+ }
+
+.images{
+  display:flex;
+  flex-wrap: wrap;
+  justify-content:center;
+  align-items:center;
+  width:100%;
+  margin-top:0px;
+  background: #E4CAB8;
+  padding-bottom:20px;
+}
+ .illustrations{
+  width:427px;
+  height:450px;
+  text-align:center;
+ }   
 
 /*----------H O M E-------------*/
 .home{
@@ -62,6 +95,7 @@ h1,h2{
 .home h1{
   text-align:center;
   margin-top:0;
+  font-size:1.5em;
 }
 .home .illustrations img{
  
@@ -98,12 +132,12 @@ h1,h2{
 .home .illustrations .titre {
   display:flex;
   justify-content:center;
-  text-align:center;
-   position:absolute;
+  text-align:center;   
     width:90%;
     height:45%;
+    position:absolute;
    top:0%;
-    left:0%;
+    left:5%;
     cursor:pointer;
   z-index:1;
   
@@ -112,6 +146,7 @@ h1,h2{
    position:relative;
    width:350px;
    height:400px;
+   text-align:center;
   
 }
 
@@ -120,6 +155,7 @@ h1,h2{
 }
 .home .show{
   opacity:1;
+ 
 }
 
 .home .opacityNo{
@@ -143,7 +179,7 @@ h1,h2{
 .patterns .titre{
   display:flex;
   flex-direction:column;
-  margin-left:300px;
+ align-items:center;
   
   
 }
@@ -168,27 +204,17 @@ h1,h2{
   display:flex;
   justify-content:center;
   align-items:center;
-
+  animation: background 5s linear infinite; 
   background-size:cover;
   
 }  
 
 
 .patterns .images{
-  display:flex;
-  flex-wrap: wrap;
-  justify-content:center;
-  width:100%;
-  margin-top:20px;
-  background: #F4EABE;
-  padding-bottom:20px;
-   position:relative;
-  
+  background: #F4EABE;    
    
 }
-.patterns .image1 {
-  animation: background 5s linear infinite; 
-}
+
 @keyframes background{
 
 0% {background-image:url("./Assets/Illustration_sans_titre-6.png")}
@@ -197,28 +223,33 @@ h1,h2{
 100% {background-image:url("./Assets/Illustration_Pattern1_BG2.png")}
 
 }
-.patterns .illustrations{
-  width:427px;
-  height:450px;
-   text-align:center;
-   
+
+/*----------F A S H I O N-------------*/
+.fashion{
+  width:100%;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
 }
-.patterns .illustrations img{
- 
-  width:90%;
-  height:420px;
-  object-fit:cover;
-  transition: 2s;
+
+
+ h1{
+  font-size: 2.5em;
+  letter-spacing: 10px;
+  margin-top:0;
+  margin-bottom:20px;
   text-align:center;
-  
+}
+ 
+/*----------P O R T R A I T S-------------*/
+.portraits{
+  width:100%;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
 }
 
-.patterns .illustrations img:hover{
-  transform:scale(1.3)
-}
-
-
-
+ 
 /*----------N A T U R E-------------*/
 
 .nature .image1{
@@ -232,45 +263,12 @@ h1,h2{
   align-items:center;
 
 }
-.nature .images{
-  display:flex;
-  flex-wrap: wrap;
-  justify-content:center;
-  align-items:center;
-  width:100%;
-  margin-top:0px;
-  background: #C6BD9E;
-  padding-bottom:20px;
-}
-.nature .illustrations{
-  width:427px;
-  height:450px;
-  text-align:center;
-   
-}
-.nature .illustrations img{
- 
-  width:90%;
-  height:420px;
-  object-fit:cover;
-  transition: 2s;
-  
-}
 
-.nature .illustrations img:hover{
-  transform:scale(1.3)
-}
-.nature{
-  width:100%;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-}
 
 .nature .titre{
   display:flex;
   flex-direction:column;
-  margin-left:300px;
+  
   
   
 }
@@ -278,12 +276,14 @@ h1,h2{
   font-size: 2.5em;
   letter-spacing: 10px;
   margin-top:0;
-  margin-bottom:0
+  margin-bottom:0;
+  text-align:center;
 }
 .nature .titre h2{
    
    margin-top:0;
    letter-spacing:0;
+   text-align:center;
   }
   /*----------F O O T E R-------------*/
 
@@ -299,26 +299,36 @@ h1,h2{
   }
 
   .footer .copyrights svg{
-    padding:0 5px;
+      padding:0 5px;
   }
    .findme{
-  margin:30px 0;
+      margin:30px 0;
+      display:flex;
+      flex-direction:column;
+      align-items:flex-start;
 
 }
-.findme img{
-  width:100%;
- padding-bottom:0;
+  .findmeimg{
+      width:100%;
+      height:20vh;
+      padding-bottom:0;
+      background-image:url("./Components/findme.png");
+      background-repeat: no-repeat;
+      background-size:100% 100%;
+
 }
  .findme ul{
-  list-style:none;
-  display:flex;
-  justify-content:center;
-  margin-top:0;
-  padding-top:0;
+      list-style:none;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      margin-top:0;
+      padding-top:0;
+      width:100%
 }
 
 .footer ul li+li{
-  margin-left:10px;
+      margin-left:10px;
 
 }
 
@@ -328,13 +338,13 @@ h1,h2{
       display:flex;
       flex-direction:column;
       align-items:center;
-     justify-content:center;
-     margin-right:5px;
-     width:60%;
-     height:500px;
-     margin-top:30;
-     margin-bottom:40px;
-     padding-bottom:15px;
+      justify-content:center;
+      margin-right:5px;
+      width:60%;
+      height:500px;
+      margin-top:30;
+      margin-bottom:40px;
+      padding-bottom:15px;
       border:1px solid white;
       border-radius:10px;
       
@@ -355,13 +365,13 @@ h1,h2{
      form textarea{
         width:80%;
         height:200px;
-        margin-top:25px;
-       
+        margin-top:25px;      
         font-size:0.8em;
-         font-weight:bolder;
+        font-weight:bolder;
         font-family: 'Roboto', sans-serif;
         opacity:0.8;
      }
+
     .contact img{
       width:45%;
       height:600px;
@@ -371,7 +381,6 @@ h1,h2{
        
        width:80%;
        margin:auto;
-      
        display:flex;
        flex-direction:row;
       justify-content:center;
@@ -387,9 +396,7 @@ h1,h2{
       flex-direction:column;
       align-items:center;
       justify-content:center;
-      text-align:center;
-    
-      
+      text-align:center;     
        
      }
      form input[type="submit"] {
@@ -400,7 +407,6 @@ h1,h2{
         border:none;
         text-align:center;
     
-
      }
      .cm h1{ 
         font-size:2em;  
@@ -415,9 +421,7 @@ h1,h2{
         align-items:flex-start;
         justify-content:space-around;
         flex-wrap:wrap;
-      
         margin:auto;
-        /*border:solid 1px blue;*/
         margin:20px 5px;
       }
       .work h1{
@@ -431,14 +435,13 @@ h1,h2{
         position:absolute;
         top:250px;
         color:white;
-        font-size:4em;
-        
-      text-align:center;
+        font-size:4em;    
+        text-align:center;
        
       }
 
       .work .littlestories .illustrations img{
-        width:150px;
+        width:145px;
         height:160px;
         object-fit:cover;
         margin:0;
@@ -446,44 +449,47 @@ h1,h2{
        
       }
       .work .littlestories .illustrations{
-         width:200px;
-         display:flex;
+        width:150px;
+        height:180px;
+        display:flex;
         justify-content:center;
         align-items:center;
         
       }
+      .work .illustrations  img:hover{
+        transform:none;
+      }
       .littlestories{
         display:flex;
         flex-direction:column;
-        justify-content:center;
         align-items:center;
-         width:400px;
-         height:800px;
-       border:#F6F7F2 2px solid;
-        background-color:#f4eabe;
+        width:360px;
+        height:800px;
+        margin-top:20px;
         border-radius:10px;
-        margin-bottom:30px;
-         position:relative;
+        position:relative;
+         
       }
       .work1{
         display:flex;
         justify-content:center;
         align-items:flex-start;
         flex-wrap:wrap;
-        width:100%;
+        width:360px;
+        height:400px;
         background-color:#F4EABE;
-         padding:10px 0;
-         margin-bottom:30px;
-
+        padding:10px 0;
+        border-radius:10px;
       }
       .work2{
         display:flex;
         justify-content:center;
         align-items:center;
         flex-wrap:wrap;
-        width:100%;      
+        width:360px; 
+        height:400px;     
         background-color:#F4EABE;
-        padding:10px 0;
+        border-radius:10px;
 
       }
       .work3{
@@ -491,34 +497,27 @@ h1,h2{
         flex-direction:column;
         justify-content:center;
         align-items:center;
-  
-         width:400px;  
-         /*border:solid 1px yellow; */
-
+        height:800px;
+        width:360px;  
+       
       }
       .fabricpatterns{
         display:flex;
         flex-direction:column;
         justify-content:center;
         align-items:center;
-          width:400px;
+        width:360px;
         height:800px;
-       border:#F6F7F2 2px solid;
-        border-radius:10px;
-        
-       
-        margin-bottom:30px;
-         position:relative;
+        margin-top:20px;
+        border-radius:10px;      
+        position:relative;
       }
       .work .fabricpatterns .illustrations img{
-         width:400px;
+        width:360px;
         height:800px;
         object-fit:cover;
-        margin:0;
-        padding:0;
-         border-radius:10px;
-          
-        /*border:1px solid red;*/
+        border-radius:10px;
+  
       
       }
       .work .fabricpatterns .illustrations{
@@ -526,28 +525,146 @@ h1,h2{
          display:flex;
         justify-content:center;
         align-items:center;
-        /*border:1px solid orange;*/
         
       }
       .book{
-        width:400px;
-       border:#F6F7F2 2px solid;
-       background-color:#7f233b;
+        width:360px;
         border-radius:10px;
-        margin-bottom:30px;
         height:800px;
+         margin-top:20px;
         display:flex;
-        flex-direction:column;
-        justify-content:flex-start;
-        align-items:center;
+        justify-content:center;
          position:relative;
-
+        
       }
       .work .book .illustrations img{
-         width:400px;
-        height:700px;
+         width:360px;
+        height:800px;
         object-fit:cover;
-        margin:40px 0;
-        padding:0;
+        border-radius:10px;
       } 
-      
+      .work .book .illustrations{
+        display:flex;
+        align-items:flex-start;
+        justify-content:center;
+
+      }
+
+ /*----------S H O P-------------*/
+    .shop{
+      width:100%;
+      height:400px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+
+    }
+
+/*-------R E S P O N S I V E--------*/
+
+      @media (max-width:420px){
+
+        .header{
+           background-size: 290% 70%;
+           width:100vw;        
+        }
+       
+        .header ul {
+          width:30%;
+          display:flex;
+          flex-direction:column;
+          flex-wrap:wrap;
+          margin-top:5px;
+          
+        }
+    
+        .header ul li +li{
+          margin-left:0px;
+       
+        }
+        .header ul li a{
+          font-size:0.7em;
+        }  
+     
+        .findmeimg{
+          width:100%;
+          width:10px;
+          padding-bottom:0;  
+          background-size: 100% 100%;
+        
+        }
+        .patterns .titre{
+          margin-left:0;
+        }
+        .home h1{
+          font-size:0.5em;
+          margin-top:20px;
+          letter-spacing:4px;
+          margin-bottom:0;
+        }
+         .findme ul li svg{  
+          width:25px;
+      }
+    }
+
+     @media(max-width:768px){
+        .header ul li a{
+          font-size:0.7em;
+        }  
+        .header ul {
+          width:30%;
+          flex-direction:column;
+        }
+        .footer .findme img{
+          width:450px;
+        }
+        .patterns .titre{
+          margin-left:0;
+        }
+        .home h1{
+          font-size:1.2em;
+          margin-top:10px
+        }
+        .patterns .image1{  
+          height:180px;
+          object-fit:cover;
+        }
+        .contact form{
+          width:400px;
+        }
+        .contact form input,textarea{
+          height:25px;
+          margin-top:20px; 
+          font-size:0.8em;
+
+        }
+        .findmeimg{
+          width:100%;
+          height:10vh;
+          padding-bottom:0;  
+          background-size: cover;
+        }
+    }
+
+    @media(max-width:1100px){
+        .header ul {
+          flex-wrap:wrap
+        }                
+         .header ul li +li{
+        margin-left:0px;
+       
+        }
+        .home h1{
+          font-size:1.2em;
+          margin-top:10px
+        }
+        .findmeimg{
+          width:100%;
+          height:100px;
+          background-size: 100% 80%;
+          padding-bottom:0;
+        
+        }
+    }
+
+   
