--- a/src/App.css
+++ b/src/App.css
@@ -359,7 +359,7 @@ h1,h2{
       font-weight:bolder;
       font-family: 'Roboto', sans-serif;
       opacity:0.8;
-      
+       border:none;
     }
 
      form textarea{
@@ -368,8 +368,10 @@ h1,h2{
         margin-top:25px;      
         font-size:0.8em;
         font-weight:bolder;
+        padding-top:10px;
         font-family: 'Roboto', sans-serif;
         opacity:0.8;
+        border:none;
      }
 
     
@@ -383,7 +385,7 @@ h1,h2{
         justify-content:center;
         align-items:center;
         background-image:url("./Assets/Illustration_Nature7.png");
-        
+        background-position:right bottom;
      }
      .cm{
         width:100%;
@@ -575,6 +577,8 @@ h1,h2{
           flex-direction:column;
           flex-wrap:wrap;
           margin-top:5px;
+          margin-right:10px;
+          
           
         }
     
@@ -603,15 +607,29 @@ h1,h2{
           margin-top:20px;
           letter-spacing:4px;
           margin-bottom:0;
+          padding-bottom:0;
+        }
+        .findme ul{
+          padding-right:20px;
         }
          .findme ul li svg{  
           width:25px;
+         
+        }
+        .findme ul li +li{
+          margin-left:5px;
         }
         .cm .contact{
           width:100%;
           height:500px;
           background-size:cover;
-           margin-top:20px;
+           margin-top:0px;
+        }
+        
+        .cm .contact form{
+            margin:20px;
+            height:400px;
+
         }
         .home .hide{
           opacity:1;
@@ -625,9 +643,9 @@ h1,h2{
           opacity:1;
         }
 
-.home .opacityYes{
-  opacity:1;
-}
+      .home .opacityYes{
+          opacity:1;
+        }
       
     }
 
@@ -653,8 +671,11 @@ h1,h2{
           height:180px;
           object-fit:cover;
         }
-        .contact form{
-          width:400px;
+        .cm .contact form{
+            margin:20px;
+            height:400px;
+            width:500px;
+
         }
         .contact form input,textarea{
           height:25px;
@@ -668,6 +689,9 @@ h1,h2{
           background-size: 100% 80%;
           padding-bottom:0;
         
+        }
+        .findme ul{
+          padding-right:20px;
         }
         .cm .contact{
           width:100%;
