--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,16 @@ h1,h2{
   text-align:center;
   margin-top:0;
   font-size:1.5em;
-}
+  animation: moove1 4s linear infinite; 
+    }
+    @keyframes moove1{
+      0% {letter-spacing:2px}
+      25% {letter-spacing:5px}
+      50%{letter-spacing:7px} 
+      75%{letter-spacing:9px} 
+      100%{letter-spacing:12px} 
+     
+    }
 .home .illustrations img{
  
   width:90%;
@@ -130,16 +139,16 @@ h1,h2{
    
 }
 .home .illustrations .titre {
-  display:flex;
-  justify-content:center;
-  text-align:center;   
+    display:flex;
+    justify-content:center;
+    text-align:center;   
     width:90%;
     height:45%;
     position:absolute;
-   top:0%;
+    top:0%;
     left:5%;
     cursor:pointer;
-  z-index:1;
+    z-index:1;
   
 }
 .home .illustrations {
@@ -614,8 +623,6 @@ h1,h2{
       width:100%;
       height:720px;
       object-fit:cover;
-
-  
     }
 
 /*-------R E S P O N S I V E--------*/
@@ -635,8 +642,7 @@ h1,h2{
           flex-direction:column;
           flex-wrap:wrap;
           margin-top:5px;
-          margin-right:10px;
-          
+          margin-right:10px;  
           
         }
     
@@ -666,7 +672,16 @@ h1,h2{
           letter-spacing:4px;
           margin-bottom:0;
           padding-bottom:0;
+          animation: moove1 4s linear infinite; 
         }
+        @keyframes moove1{
+          0% {letter-spacing:0px}
+          25% {letter-spacing:1px}
+          50%{letter-spacing:2px} 
+          75%{letter-spacing:3px} 
+          100%{letter-spacing:4px} 
+     
+    }
         .findme ul{
           padding-right:20px;
         }
@@ -733,22 +748,33 @@ h1,h2{
     }  
     .patterns .image1{
       width:92%;
-      height:300px;
+      height:350px;
       object-fit:cover;
       margin-top:20px;
-      background: #F4EABE;
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      animation: background 5s linear infinite; 
-      background-size:cover;
+      animation: background 7s linear infinite; 
+      background-size:100% 100%;
   
     }  
     .illustrations  img:hover{
-        transform:scale(1)
+        transform:scale(1.3);
     }
-      
-      }
+    .nature .image1{
+      width:92%;
+      height:350px;
+      object-fit:cover;
+      margin-top:20px;
+       }  
+
+    .home .illustrations .titre { 
+      width:90%;
+      height:45%;
+      position:absolute;
+      top:0%;
+      left:5%;
+      z-index:1;
+  
+}  
+  }
     /*---I PAD---*/
 
      @media(max-width:768px){
