--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,7 @@ h1,h2{
   text-align:center;
   margin-top:0;
   font-size:1.5em;
-  animation: moove1 4s linear infinite; 
+  animation: moove1 4s linear; 
     }
     @keyframes moove1{
       0% {letter-spacing:2px}
@@ -259,7 +259,9 @@ h1,h2{
   flex-direction:column;
   justify-content:center;
 }
-
+.portraits .images{
+  background-color:#c7bc9e;
+}
  
 /*----------N A T U R E-------------*/
 
@@ -274,7 +276,9 @@ h1,h2{
   align-items:center;
 
 }
-
+.nature .images{
+  background-color:#C6BD9E;
+}
 
 .nature .titre{
   display:flex;
@@ -332,6 +336,7 @@ h1,h2{
    .findme{
       margin:30px 0;
       height:180px;
+      margin-top:100px;
       padding-bottom:0;
       display:flex;
       flex-direction:column;
@@ -466,9 +471,9 @@ h1,h2{
       }
       .work h2{
         position:absolute;
-        top:250px;
+        top:320px;
         color:white;
-        font-size:4em;    
+        font-size:3em;    
         text-align:center;
        
       }
@@ -499,7 +504,6 @@ h1,h2{
         width:360px;
         height:800px;
         margin-top:20px;
-        border-radius:10px;
         position:relative;
          
       }
@@ -512,7 +516,7 @@ h1,h2{
         height:400px;
         background-color:#F4EABE;
         padding:10px 0;
-        border-radius:10px;
+      
       }
       .work2{
         display:flex;
@@ -521,8 +525,9 @@ h1,h2{
         flex-wrap:wrap;
         width:360px; 
         height:400px;     
+        margin-top:5px;
         background-color:#F4EABE;
-        border-radius:10px;
+       
 
       }
       .work3{
@@ -541,15 +546,14 @@ h1,h2{
         align-items:center;
         width:360px;
         height:800px;
-        margin-top:20px;
-        border-radius:10px;      
+        margin-top:20px;    
         position:relative;
       }
       .work .fabricpatterns .illustrations img{
         width:360px;
         height:800px;
         object-fit:cover;
-        border-radius:10px;
+      
   
       
       }
@@ -562,7 +566,7 @@ h1,h2{
       }
       .book{
         width:360px;
-        border-radius:10px;
+    
         height:800px;
          margin-top:20px;
         display:flex;
@@ -574,7 +578,7 @@ h1,h2{
          width:360px;
         height:800px;
         object-fit:cover;
-        border-radius:10px;
+       
       } 
       .work .book .illustrations{
         display:flex;
@@ -672,7 +676,7 @@ h1,h2{
           letter-spacing:4px;
           margin-bottom:0;
           padding-bottom:0;
-          animation: moove1 4s linear infinite; 
+          animation: moove1 4s linear; 
         }
         @keyframes moove1{
           0% {letter-spacing:0px}
